# mpt3lowcom

./: Makefile.in  configure  configure.ac
mpt3lowcom/@FittingController/: FittingController.m
tests/: mpt3lowcom_tests.m
tests/fitting/: test_fitting_02_pass.m
tests/mintime/: test_mintime_06_pass.m
